# CuDDHelmholtz

./: .gitignore  CMakeLists.txt  README.md  config.in  cuddh.hpp
examples/: .gitignore  CMakeLists.txt  DDH.cpp  Helmholtz.cpp  Helmholtz.hpp  Poisson.cpp  WaveHoltz.cpp  examples.hpp
include/: .gitignore  Basis.hpp  DDH.hpp  Edge.hpp  Element.hpp  EnsembleSpace.hpp  FaceLinearFunctional.hpp  FaceMassMatrix.hpp  H1Space.hpp  HostDeviceArray.hpp  LinearFunctional.hpp  MassMatrix.hpp  Mesh2D.hpp  Node.hpp  Operator.hpp  QuadratureRule.hpp  StiffnessMatrix.hpp  Tensor.hpp  cuddh_error.hpp  forall.hpp  gmres.hpp  linalg.hpp
source/: Basis.cpp  DDH.cpp  Element.cpp  EnsembleSpace.cpp  FaceLinearFunctional.cpp  FaceMassMatrix.cpp  H1Space.cpp  LinearFunctional.cpp  MassMatrix.cpp  Mesh2D.cpp  QuadratureRule.cpp  StiffnessMatrix.cpp  cuddh_error.cpp  gmres.cpp  linalg.cpp
tests/: .gitignore  CMakeLists.txt  basis.cpp  gmres.cpp  linalg.cpp  load_unstructured_square.cpp  mass.cpp  quadrature_rule.cpp  stiffness.cpp  test.cpp  test.hpp
